--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-dialog-queue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp build"
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/lsslu/react-dialog-queue#readme",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "classnames": "^2.2.5",
     "immutable": "^3.8.1",
     "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0"
   },
