--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^7.0.0",
     "classnames": "^2.2.5",
     "immutable": "^3.8.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^1.3.1",
